--- a/Kmeans.ipynb
+++ b/Kmeans.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
     "                # if X is a vector, set center[i, 0] to X\n",
     "                if X_i.ndim == 1:\n",
     "                    self.centers[i, ] = X_i\n",
-    "                # if X is empty, set center[i, ] to zero vectors \n",
+    "                # if X is empty, set center[i, ] to a zero vector\n",
     "                elif X_i.size == 0:\n",
     "                    self.centers[i, ] = np.zeros(self.X_cols_)\n",
     "                else:\n",
