add kMeans features in Classfier

--- a/Kmeans.ipynb
+++ b/Kmeans.ipynb
@@ -177,7 +177,7 @@
     "                    self.centers[i, ] = X_i\n",
     "                # if X is empty, set center[i, ] to a zero vector\n",
     "                elif X_i.size == 0:\n",
-    "                    self.centers[i, ] = np.zeros(self.X_cols_)\n",
+    "                    self.centers[i, ] = np.zeros(self._X_cols)\n",
     "                else:\n",
     "                    self.centers[i, ] = np.mean(X_i, axis=0)\n",
     "            \n",
